tests/ui/bound-struct-without-generic.stderr
error: #[error(bound = ...)] requires generics to apply bounds against
 --> $DIR/bound-struct-without-generic.rs:4:1
  |
4 | #[error(bound = std::error::Error + 'static)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
